@@ -1,4 +1,5 @@
 
+   Enable some special characters in the filename: space ( ) and dot (.)
    Eliminate cache from the Ajax get requests as IE (both 8 and 9) would cache by default.
 
 v0.11 2011.09.10
